date select year and time formats

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -21,3 +21,10 @@
 
 en:
   hello: "Hello world"
+  time:
+    formats: 
+      shorty: "%B %d, %Y"
+      amp: "%B %d %I:%M %p"
+      member_since: "%-m/%y"
+      month: "%B"
+      month_year: "%B %Y"
