--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -16,15 +16,18 @@
 #
 # This would use the information in config/locales/es.yml.
 #
+# The following keys must be escaped otherwise they will not be retrieved by
+# the default I18n backend:
+#
+# true, false, on, off, yes, no
+#
+# Instead, surround them with single quotes.
+#
+# en:
+#   'true': 'foo'
+#
 # To learn more, please read the Rails Internationalization guide
 # available at http://guides.rubyonrails.org/i18n.html.
 
 en:
   hello: "Hello world"
-  time:
-    formats: 
-      shorty: "%B %d, %Y"
-      amp: "%B %d %I:%M %p"
-      member_since: "%-m/%y"
-      month: "%B"
-      month_year: "%B %Y"
